[gd_scene load_steps=2 format=2]

[ext_resource path="res://TodoView/AddEditTodo.gd" type="Script" id=1]

[node name="AddEditTodo" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -710.0
margin_bottom = -426.0
popup_exclusive = true
window_title = "Add todo"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 298.0
margin_bottom = 158.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 298.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Name" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_right = 104.0
margin_bottom = 24.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/GridContainer/Name"]
margin_right = 24.0
margin_bottom = 24.0
disabled = true
pressed = true

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/Name"]
margin_left = 28.0
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
text = "Name:"

[node name="NameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 108.0
margin_right = 298.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Due" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 28.0
margin_right = 104.0
margin_bottom = 52.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/GridContainer/Due"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/Due"]
margin_left = 28.0
margin_top = 5.0
margin_right = 58.0
margin_bottom = 19.0
text = "Due:"

[node name="DueOptions" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 108.0
margin_top = 28.0
margin_right = 298.0
margin_bottom = 52.0

[node name="Year" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer/DueOptions"]
margin_left = 95.0
margin_right = 124.0
margin_bottom = 24.0
size_flags_horizontal = 10
disabled = true

[node name="Month" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer/DueOptions"]
margin_left = 128.0
margin_right = 157.0
margin_bottom = 24.0
disabled = true

[node name="Day" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer/DueOptions"]
margin_left = 161.0
margin_right = 190.0
margin_bottom = 24.0
disabled = true

[node name="Priority" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 56.0
margin_right = 104.0
margin_bottom = 80.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/GridContainer/Priority"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/Priority"]
margin_left = 28.0
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
text = "Priority:"

[node name="PriorityOption" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 260.0
margin_top = 56.0
margin_right = 298.0
margin_bottom = 80.0
size_flags_horizontal = 10
disabled = true
text = "A"

[node name="Recurrence" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 84.0
margin_right = 104.0
margin_bottom = 108.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/GridContainer/Recurrence"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/Recurrence"]
margin_left = 28.0
margin_top = 5.0
margin_right = 104.0
margin_bottom = 19.0
text = "Recurrence:"

[node name="RecurrenceOption" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 108.0
margin_top = 84.0
margin_right = 298.0
margin_bottom = 108.0

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer/RecurrenceOption"]
margin_left = 77.0
margin_right = 135.0
margin_bottom = 24.0
size_flags_horizontal = 10
text = "1"
align = 2
editable = false

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer/RecurrenceOption"]
margin_left = 139.0
margin_right = 190.0
margin_bottom = 24.0
disabled = true
text = "day"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 298.0
margin_bottom = 158.0

[node name="Confirm" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 92.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Add"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 197.0
margin_right = 251.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Cancel"

[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/Due/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/Priority/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/Recurrence/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_Confirm_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_button_up"]
